Feat : setting gradle build